--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: blue;
+  background-color: #FEFFF1;
 }
 
 h1 {
@@ -19,11 +19,91 @@ ol {
   list-style: square inside;
 }
 
-header > img{
+header > img {
   width: 100px;
+  float: left;
 }
 
 ul li a{
   text-decoration: none;
   color: inherit;
+}
+
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    background-image: url(stars.png);
+    vertical-align: bottom;
+}
+
+input:last-child {
+    background: gold;
+}
+
+input:last-child:hover {
+    -webkit-filter: brightness(90%);
+}
+
+ol li:nth-of-type(2n) {
+  background-color: whitesmoke;
+}
+
+h2 + .user_review {
+    border-top: 1px solid black;
+}
+
+nav {
+    float: right;
+}
+
+nav ul li {
+    display:  inline-block;
+}
+
+nav ul li a {
+    padding: 20px;
+    display: block;
+}
+
+body {
+    margin: 0 auto;
+    width: 60%
+}
+
+section {
+  width: 700px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+aside {
+    width: 180px;
+    margin-right: 15px;
+    display: inline-block;
+}
+
+
+.ingredients-list li {
+ margin: 15px 0px;
+}
+
+label {
+  display: block;
+}
+
+
+input[type="text"], select {
+  display: block;
+  width: 150px;
+}
+
+select {
+  margin: 20px 0;
+  width: 150px;
+}
+
+textarea {
+  width: 350px;
 }
