--- a/css.css
+++ b/css.css
@@ -107,3 +107,36 @@ select {
 textarea {
   width: 350px;
 }
+
+.hamburger-dropdown {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  nav ul {
+    display: none;
+  }
+  .hamburger-dropdown {
+    display: block;
+  }
+
+  .hamburger-dropdown > li{
+    background: url(hamburger.png);
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+    position: relative;
+  }
+
+  .hamburger-dropdown ul {
+   position: absolute;
+   top: 50px;
+   left: 0;
+   flex-direction: column;
+ }
+
+  .hamburger-dropdown:hover ul {
+    display: block;
+  }
+}
